--- a/wedプログラミング/第5回/kadai05.html
+++ b/wedプログラミング/第5回/kadai05.html
@@ -18,9 +18,10 @@
         document.getElementById('life').innerHTML = Number(lifeNow) - 1;
       }
 
+      var ResetLife = 20;
       function reset()
       {
-        document.getElementById('life').innerHTML = 20;
+        document.getElementById('life').innerHTML = ResetLife;
         alert('Reset');
       }
       
