--- a/wedプログラミング/第6回/sample6-4.html
+++ b/wedプログラミング/第6回/sample6-4.html
@@ -31,6 +31,10 @@
 		  var uid = document.createElement('td');
           uid.innerHTML = document.getElementById('uid').value;
           row.appendChild( uid );
+
+          var name = document.createElement('td');
+          name.innerHTML = document.getElementById('name').value;
+          row.appendChild(name);
           
 		  t.appendChild(row);
       }
