--- a/wedプログラミング/第7回/sample06-1.html
+++ b/wedプログラミング/第7回/sample06-1.html
@@ -6,9 +6,10 @@
   </head>
   <body>
 
-      <a class="twitter-timeline" href="https://twitter.com/NASA?ref_src=twsrc%5Etfw">Tweets by NASA</a>
-
-<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
+    <blockquote class="twitter-tweet" data-theme="dark">
+    <p lang="ja" dir="ltr">🐦‍⬛「ヤラレタ……」 
+    <a href="https://t.co/sBLaDQUEDl">pic.twitter.com/sBLaDQUEDl</a></p>&mdash; 霙色🐝 (@____MizoRe) 
+    <a href="https://twitter.com/____MizoRe/status/1853733713357746478?ref_src=twsrc%5Etfw">November 5, 2024</a></blockquote> 
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   </body>
 </html>
