--- a/wedプログラミング/第7回/sample06-2.html
+++ b/wedプログラミング/第7回/sample06-2.html
@@ -20,7 +20,7 @@ function showNasa()
   <body>
 
 <button type="button" name="NASA" onclick='showNasa()'>NASA</button>
-<input type='text' id='searchName />
+<input type='text' id='searchName' />
 <div id='nasaSpace'></div>
 
   </body>
