add cord line10

--- a/wedプログラミング/第10回/22311081 saito reo kadai08.html
+++ b/wedプログラミング/第10回/22311081 saito reo kadai08.html
@@ -7,6 +7,7 @@
 
     function searchCallback(result) {
         output = document.getElementById('outputArea');
+        output.innerHTML = "";        //検索結果をリセット
         results = result.results;
         for (var r of results) {
             var oneline = document.createElement('div');
