--- a/wedプログラミング/第11回/kadai10.html
+++ b/wedプログラミング/第11回/kadai10.html
@@ -27,7 +27,7 @@
     <body>
     <div id="warning"></div>
 
-    <script src="https://iis.edu.tama.ac.jp/websv/students.php?cid=10001&&callback=attend&summary=1&key=22311081"></script>
-<!-- <script src="https://iis.edu.tama.ac.jp/websv/students.php?cid=10001&sid=29988777&callback=attend&summary=1&key=22311081"></script> -->
+    <script src="https://iis.edu.tama.ac.jp/websv/students.php?cid=10001&&callback=attend&summary=1&key="></script>
+<!-- <script src="https://iis.edu.tama.ac.jp/websv/students.php?cid=10001&sid=29988777&callback=attend&summary=1&key="></script> -->
     </body>
 </html>
