Del kadai10.html

--- a/wedプログラミング/第12回/kadai10.html
+++ b/wedプログラミング/第12回/kadai10.html
@@ -42,8 +42,8 @@
     <div id="warning"></div>
 
     <table><tr><th>学籍番号</tr><tr id="onestudent"></tr></table>
-    <script src="https://iis.edu.tama.ac.jp/websv/students.php?cid=10001&sid=29988777&callback=attend&key=22311081"></script>
-    <!-- 1) <script src="https://iis.edu.tama.ac.jp/websv/students.php?cid=10001&&callback=attend&summary=1&key=22311081"></script> -->
-    <!-- 2,3) <script src="https://iis.edu.tama.ac.jp/websv/students.php?cid=10001&sid=29988777&callback=attend&summary=1&key=22311081"></script> -->
+    <script src="https://iis.edu.tama.ac.jp/websv/students.php?cid=10001&sid=29988777&callback=attend&key="></script>
+    <!-- 1) <script src="https://iis.edu.tama.ac.jp/websv/students.php?cid=10001&&callback=attend&summary=1&key="></script> -->
+    <!-- 2,3) <script src="https://iis.edu.tama.ac.jp/websv/students.php?cid=10001&sid=29988777&callback=attend&summary=1&key="></script> -->
     </body>
 </html>
