--- a/wedプログラミング/第13回/saisyukadai/kadai.html
+++ b/wedプログラミング/第13回/saisyukadai/kadai.html
@@ -4,10 +4,10 @@
     </head>
     <body>
         
-        <input id="inputtext" type="text" name="henkan" value="">
+        <textarea id='searchWord' placeholder="日本語以外の言語で入力してください"></textarea>
         <button type="button" name="henkanButton" onclick="active()">変換</button>
 
-        <div id="show"></div>
+        <textarea id="show"></textarea>
         
         <script src="API.js"></script>
     </body>
