--- a/wedプログラミング/第13回/saisyukadai/kadai.html
+++ b/wedプログラミング/第13回/saisyukadai/kadai.html
@@ -4,11 +4,10 @@
         <script type="module" src="get.js"></script>
     </head>
     <body>
-        <div id="header">翻訳君</div>
         <textarea id='searchWord' placeholder="日本語以外の言語で入力してください"></textarea>
         <button type="button" name="henkanButton" onclick="active()">変換</button>
 
-        <div id="show">変換先</div>
+        <textarea id="show" placeholder="変換先"></textarea>
         
     </body>
 </html>
